# RCJ_SOCCER_OPEN_2025

./: .gitignore  LICENCE  README.md
cad/: README
jetson/catkin_ws/src/robocup2024/: CMakeLists.txt
jetson/catkin_ws/src/robocup2024/include/: binarySerializationData.h  blob_detection.h  chassis.h  preprocessing.h  serializer.h
jetson/catkin_ws/src/robocup2024/launch/: robot.launch
jetson/catkin_ws/src/robocup2024/lib/: blob_detection.cpp  chassis.cpp  gstreamer.cpp  preprocessing.cpp  serializer.cpp
jetson/catkin_ws/src/robocup2024/src/: frontcamera.cpp  omnicamera.cpp  pico_data_processor.cpp  rpi-serial.py
jetson/catkin_ws/src/robocup2025/: CMakeLists.txt  package.xml
jetson/catkin_ws/src/robocup2025/include/: angle.h  binarySerializationData.h  blob_detection.h  chassis.h  gstreamer.h
jetson/catkin_ws/src/robocup2025/launch/: camera.launch  robot.launch
jetson/catkin_ws/src/robocup2025/lib/: blob_detection.cpp  preprocessing.cpp
jetson/catkin_ws/src/robocup2025/src/: rpi-serial.py
rpi_pico/: CMakeLists.txt  main.cpp
rpi_pico/lib/hardware/: compass_classes.cpp  compass_classes.h  kicker.cpp  kicker.h  light_sensor.cpp  light_sensor.h  motor.cpp  motor.h
rpi_pico/lib/software/: binarySerializationData.h  pid.cpp  pid.h  serializer.cpp  serializer.h
rpi_pico/pico-lib/: gpio.h  time.h
rpi_pico/pico-lib/definitions/: gpio.cpp  time.cpp
